crates/hpc-core/tests/compile-fail/api_inflight_write.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/api_inflight_write.rs
  |
  |     let _bad = q.enqueue_write(inflight, &[1u32; 16]);
  |                  ------------- ^^^^^^^^ expected `DeviceBuffer<u32, Empty>`, found `DeviceBuffer<u32, InFlight>`
  |                  |
  |                  arguments to this method are incorrect
  |
  = note: expected struct `DeviceBuffer<u32, hpc_core::buffer::state::Empty>`
             found struct `DeviceBuffer<u32, InFlight>`
note: method defined here
 --> src/api.rs
  |
  | pub fn enqueue_write<T>(
  |        ^^^^^^^^^^^^^
